--- a/src/app/demo-home/demo-home.component.html
+++ b/src/app/demo-home/demo-home.component.html
@@ -9,13 +9,15 @@
       <nb-card>
         <nb-card-header>Social Login</nb-card-header>
         <nb-card-body class="social-buttons">
-          <button routerLink="/demo-list" nbButton outline status="danger"><nb-icon icon="google"></nb-icon>Google</button>
+          <button nbButton outline
+                  status="danger" (click)="login(AuthProviders.GOOGLE)"><nb-icon icon="google"></nb-icon>Google</button>
           <br>
-          <button nbButton outline status="dark"><nb-icon icon="github"></nb-icon>Github</button>
+          <button nbButton outline status="dark"
+                  (click)="login(AuthProviders.GITHUB)"><nb-icon icon="github"></nb-icon>Github</button>
           <br>
-          <button nbButton outline status="info"><nb-icon icon="twitter"></nb-icon>Twitter</button>
+          <button nbButton outline status="info" (click)="login(AuthProviders.TWITTER)"><nb-icon icon="twitter"></nb-icon>Twitter</button>
           <br>
-          <button nbButton outline status="primary"><nb-icon icon="facebook"></nb-icon>Facebook</button>
+          <button nbButton outline status="primary" (click)="login(AuthProviders.FACEBOOK)"><nb-icon icon="facebook"></nb-icon>Facebook</button>
         </nb-card-body>
       </nb-card>
     </div>
