show current user displayName in header

--- a/src/app/ui/header/header.component.scss
+++ b/src/app/ui/header/header.component.scss
@@ -1,9 +1,5 @@
 .header-actions {
   display: inline-flex;
   flex: 1 1 auto;
-  justify-content: space-around;
-}
-
-.menu-toggle {
-  margin-left: 15px;
+  justify-content: space-between;
 }
