--- a/src/app/ui/header/header.component.html
+++ b/src/app/ui/header/header.component.html
@@ -1,14 +1,17 @@
 <div class="header-actions" *ngIf="user | async">
-  <div class="menu-toggle">
+  <div>
     <nb-toggle status="warning" [checked]="barStatus['favbar']"
                (checkedChange)="toggleBar($event, 'favbar')">
       Favorites
     </nb-toggle>
   </div>
-  <div class="menu-toggle">
-    <nb-toggle status="info" [checked]="barStatus['menubar']"
-               (checkedChange)="toggleBar($event, 'menubar')">
-      Menu
-    </nb-toggle>
+<!--  <div>-->
+  <!--    <nb-toggle status="info" [checked]="barStatus['menubar']"-->
+  <!--               (checkedChange)="toggleBar($event, 'menubar')">-->
+  <!--      Menu-->
+  <!--    </nb-toggle>-->
+  <!--  </div>-->
+  <div (click)="toggleBar($event, 'menubar')" align="right">
+    <nb-user size="medium" [name]="(user | async).displayName" [picture]="(user | async).photoURL"></nb-user>
   </div>
 </div>
