contextual menu on fab buttons
update user data on login

--- a/src/app/demo-item/demo-item.component.html
+++ b/src/app/demo-item/demo-item.component.html
@@ -27,8 +27,8 @@
                  (click)="toggleFavorite($event)"></nb-icon>
       </nb-action>
       <nb-action>
-        <nb-icon [icon]="isRetwita ? 'repeat' : 'repeat-outline'"
-                 [status]="isRetwita ? 'success' : 'basic'"
+        <nb-icon [icon]="isShared ? 'share' : 'share-outline'"
+                 [status]="isShared ? 'success' : 'basic'"
                  (click)="toggleRetwita($event)"></nb-icon>
       </nb-action>
       <nb-action>
