--- a/src/app/ui/fab-twita/fab-twita.component.html
+++ b/src/app/ui/fab-twita/fab-twita.component.html
@@ -1,4 +1,5 @@
-<button class="fab-twita" nbButton shape="rectangle" size="giant" status="primary">
+<button class="fab-twita" nbButton shape="rectangle"
+        size="giant" status="primary" [nbContextMenu]="items" nbContextMenuTag="fab-twita-menu">
   <nb-icon icon="plus-square-outline"></nb-icon>
   Twita
 </button>
