posts and pages modules

--- a/src/app/demo-code/demo-code.component.html
+++ b/src/app/demo-code/demo-code.component.html
@@ -1,6 +1,6 @@
 <div style="max-width: 800px; margin: auto; background: aliceblue;">
   <section>
-    <app-demo-item *ngIf="post" [post]="post.data" [user]="post.user"></app-demo-item>
+    <app-post-item *ngIf="post" [post]="post.data" [user]="post.user"></app-post-item>
   </section>
   <section style="margin: auto;">
     <nb-list nbInfiniteList [threshold]="500">
