--- a/src/app/posts/post-item/post-item.component.html
+++ b/src/app/posts/post-item/post-item.component.html
@@ -29,7 +29,7 @@
       <nb-action>
         <nb-icon [icon]="isShared ? 'share' : 'share-outline'"
                  [status]="isShared ? 'success' : 'basic'"
-                 (click)="toggleRetwita($event)"></nb-icon>
+                 (click)="toggleShared($event)"></nb-icon>
       </nb-action>
       <nb-action>
         <button nbButton status="basic" (click)="commentPost()">
