--- a/src/app/ui/header/header.component.html
+++ b/src/app/ui/header/header.component.html
@@ -1,10 +1,5 @@
 <div class="header-actions" *ngIf="(user | async)">
-  <div>
-    <nb-toggle status="warning" [checked]="barStatus['favbar']"
-               (checkedChange)="toggleBar($event, 'favbar')">
-      Favorites
-    </nb-toggle>
-  </div>
+  <div>&nbsp;</div>
   <div (click)="toggleBar($event, 'menubar')" align="right">
     <nb-user size="medium" [name]="(user | async).displayName" [picture]="(user | async).photoURL"></nb-user>
   </div>
