--- a/src/app/ui/menubar/menubar.component.html
+++ b/src/app/ui/menubar/menubar.component.html
@@ -1,4 +1,13 @@
 <div>
+    <div>
+      <nb-toggle status="warning" [checked]="barStatus['favbar']"
+                 (checkedChange)="toggleBar($event, 'favbar')">
+        Show favorites
+      </nb-toggle>
+    </div>
+</div>
+<br>
+<div>
   <nb-menu [items]="items"></nb-menu>
 </div>
 <br><br>
