--- a/src/app/ui/header/header.component.html
+++ b/src/app/ui/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="header-actions" *ngIf="(user | async)">
+<div *ngIf="user | async" class="header-actions">
   <div>&nbsp;</div>
   <div (click)="toggleBar($event, 'menubar')" align="right">
     <nb-user size="medium" [name]="(user | async).displayName" [picture]="(user | async).photoURL"></nb-user>
