Create Post Dialog
Created Services for: DB and Storage.
Added toasty or NbToastrService

--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -1,8 +1,8 @@
-.home-hero {
+.login-hero {
   width: 100%;
 }
 
-.home-container {
+.login-container {
   max-width: 800px;
   margin: 5% auto 5% auto;
 }
