--- a/src/app/ui/fab-twita/fab-twita.component.html
+++ b/src/app/ui/fab-twita/fab-twita.component.html
@@ -1,5 +1,5 @@
-<button class="fab-twita" nbButton shape="rectangle"
-        size="giant" status="primary" (click)="openTwitaDialog()">
+<button nbButton shape="rectangle"
+        size="large" status="primary" (click)="openTwitaDialog()">
   <nb-icon icon="plus-square-outline"></nb-icon>
   Twita
 </button>
