--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -3,11 +3,13 @@
     <br><br>
     <br><br>
   </nb-card>
+  <div align="center">
+    <h4 *ngIf="!loading && !posts.length">There are no posts yet</h4>
+  </div>
   <nb-list *ngIf="posts.length" nbInfiniteList [threshold]="100" listenWindowScroll>
     <nb-list-item *ngFor="let post of posts" style="padding: 0; max-width: 600px;">
       <app-post-item [post]="post" style="border-radius: 0; width: 100%;">
       </app-post-item>
     </nb-list-item>
   </nb-list>
-  <app-fab-twita></app-fab-twita>
 </div>
