--- a/src/app/ui/fab-twita/fab-twita.component.scss
+++ b/src/app/ui/fab-twita/fab-twita.component.scss
@@ -1,6 +1,6 @@
-.fab-twita {
-  position: fixed;
-  bottom: 5%;
-  right: 10%;
-  z-index: 998;
-}
+//.fab-twita {
+//  position: fixed;
+//  bottom: 5%;
+//  right: 10%;
+//  z-index: 998;
+//}
