--- a/src/app/posts/create-post/post-text-form/post-text-form.component.html
+++ b/src/app/posts/create-post/post-text-form/post-text-form.component.html
@@ -8,12 +8,12 @@
       <textarea nbInput fullWidth formControlName="description"
                 placeholder="Description" rows="5"></textarea>
       <br><br>
-      <tag-input formControlName="tags" nbInput maxItems="5" [separatorKeyCodes]="[32]"></tag-input>
+      <tag-input *ngIf="!isComment" formControlName="tags" nbInput maxItems="5" [separatorKeyCodes]="[32]"></tag-input>
       <br>
       <div align="center">
         <button nbButton status="primary" type="submit" [disabled]="textForm.invalid">
           <nb-icon icon="paper-plane-outline"></nb-icon>
-          Publish
+          {{ isComment ? 'Comment' : 'Publish'}}
         </button>
       </div>
     </form>
