--- a/src/app/posts/create-post/post-code-form/post-code-form.component.html
+++ b/src/app/posts/create-post/post-code-form/post-code-form.component.html
@@ -11,12 +11,12 @@
       <textarea nbInput fullWidth formControlName="code"
                 placeholder="Paste your code here" rows="10"></textarea>
       <br><br>
-      <tag-input formControlName="tags" nbInput maxItems="5" [separatorKeyCodes]="[32]"></tag-input>
+      <tag-input *ngIf="!isComment" formControlName="tags" nbInput maxItems="5" [separatorKeyCodes]="[32]"></tag-input>
       <br>
       <div align="center">
         <button nbButton status="primary" type="submit" [disabled]="codeForm.invalid">
           <nb-icon icon="paper-plane-outline"></nb-icon>
-          Publish
+          {{ isComment ? 'Comment' : 'Publish'}}
         </button>
       </div>
     </form>
