--- a/src/app/ui/fab-reply/fab-reply.component.html
+++ b/src/app/ui/fab-reply/fab-reply.component.html
@@ -1,5 +1,5 @@
 <button class="fab-reply" nbButton shape="rectangle"
-        size="giant" status="primary" [nbContextMenu]="items" nbContextMenuTag="fab-reply-menu">
+        size="giant" status="primary">
   <nb-icon icon="message-square-outline"></nb-icon>
   Reply
 </button>
