--- a/src/app/pages/single-post/single-post.component.scss
+++ b/src/app/pages/single-post/single-post.component.scss
@@ -1,3 +1,9 @@
+.single-post {
+  max-width: 700px;
+  margin: auto;
+  background: aliceblue;
+}
+
 .reply-box {
   position: sticky;
   z-index: 998;
