user recent post on profile

--- a/src/app/posts/user-recent-posts/user-recent-posts.component.html
+++ b/src/app/posts/user-recent-posts/user-recent-posts.component.html
@@ -1,3 +1,3 @@
 <div *ngIf="posts.length">
-  <app-post-list [posts]="posts" [loading]="true"></app-post-list>
+  <app-post-list [posts]="posts"></app-post-list>
 </div>
