--- a/src/app/ui/user-profile/user-meta/user-meta.component.html
+++ b/src/app/ui/user-profile/user-meta/user-meta.component.html
@@ -5,7 +5,7 @@
             nbPopoverTrigger="hint" nbPopoverPlacement="bottom">
         <nb-icon icon="file-text-outline" status="primary"></nb-icon>{{userMeta.posts}}<br><small>posts</small>
       </span>
-      <span class="meta-icon" nbPopover="number of times your posts have been bookmarked"
+      <span class="meta-icon" nbPopover="times your posts have been bookmarked"
             nbPopoverTrigger="hint" nbPopoverPlacement="bottom">
         <nb-icon icon="heart" status="danger"></nb-icon>{{userMeta.hearts}}<br><small>hearts</small>
       </span>
