--- a/src/app/ui/user-profile/user-profile-header/user-profile-header.component.scss
+++ b/src/app/ui/user-profile/user-profile-header/user-profile-header.component.scss
@@ -2,3 +2,7 @@ nb-card {
   margin-bottom: 0;
   border-radius: 0;
 }
+.user-header-content {
+  display: inline-flex;
+  justify-content: space-between;
+}
