--- a/src/app/posts/create-post/post-image-form/post-image-form.component.html
+++ b/src/app/posts/create-post/post-image-form/post-image-form.component.html
@@ -15,7 +15,8 @@
         <nb-progress-bar [value]="roundProgress()" [displayValue]="true"></nb-progress-bar>
       </span>
       <br><br>
-      <tag-input *ngIf="!isComment" formControlName="tags" nbInput maxItems="5" [separatorKeyCodes]="[32]"></tag-input>
+      <tag-input *ngIf="!isComment" formControlName="tags" nbInput maxItems="5" [separatorKeyCodes]="[32]"
+                 [blinkIfDupe]="true" [allowDupes]="false"></tag-input>
       <br>
       <div align="center">
         <button nbButton status="primary" type="submit" [disabled]="textForm.invalid">
