--- a/src/app/posts/post-item/post-item.component.html
+++ b/src/app/posts/post-item/post-item.component.html
@@ -1,5 +1,5 @@
 <nb-card>
-  <nb-card-header *ngIf="author" [routerLink]="'/profile/' + author.uid">
+  <nb-card-header *ngIf="author" [routerLink]="'/profile/' + author.uid" class="clickable">
     <nb-user [picture]="(author).photoURL || '/assets/icon/apple-icon-152x152.png'"
              [name]="(author).displayName"
              [title]="(author).catchPhrase || ''"></nb-user>
@@ -26,7 +26,7 @@
       <app-post-actions [post]="post" [isComment]="isComment" [parentId]="parentId"></app-post-actions>
   </nb-card-footer>
   <div class="post-tags">
-    <a *ngFor="let tag of post.tags" (click)="goToTag(tag)">#{{tag}}</a>
+    <a class="clickable" *ngFor="let tag of post.tags" (click)="goToTag(tag)">#{{tag}}</a>
   </div>
   <br>
 </nb-card>
