--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,5 +4,10 @@
 
 @include nb-install() {
   @include nb-theme-global();
-};
+}
+
+;
 /* You can add global styles to this file, and also import other style files */
+.clickable {
+  cursor: pointer;
+}
