Publish & Comment from the same logic
Using the fab-twita at the top center and closing the dialog at the end

--- a/src/app/pages/single-post/single-post.component.html
+++ b/src/app/pages/single-post/single-post.component.html
@@ -9,16 +9,16 @@
       </nb-list-item>
     </nb-list>
   </section>
-  <div class="reply-box">
-    <nb-accordion>
-      <nb-accordion-item #replyBox>
-        <nb-accordion-item-header>Click to reply</nb-accordion-item-header>
-        <nb-accordion-item-body>
-          <app-create-post [isComment]="true" [postId]="post.id"></app-create-post>
-        </nb-accordion-item-body>
-      </nb-accordion-item>
-    </nb-accordion>
-  </div>
+  <!--  <div class="reply-box">-->
+  <!--    <nb-accordion>-->
+  <!--      <nb-accordion-item #replyBox>-->
+  <!--        <nb-accordion-item-header>Click to reply</nb-accordion-item-header>-->
+  <!--        <nb-accordion-item-body>-->
+  <!--          <app-create-post [isComment]="true" [postId]="post.id"></app-create-post>-->
+  <!--        </nb-accordion-item-body>-->
+  <!--      </nb-accordion-item>-->
+  <!--    </nb-accordion>-->
+  <!--  </div>-->
   <!--  <app-fab-reply (click)="toggleReplyBox()"></app-fab-reply>-->
 </div>
 <ng-template #postDeleted>
